--- a/snippets/partnerships-featured.liquid
+++ b/snippets/partnerships-featured.liquid
@@ -219,7 +219,8 @@
 
     @media screen and (max-width: 768px) {
     .featured-section {
-      padding:{% if isFlash %}160px 0 0 {% else %} 76px 0 0 {% endif %};
+      padding-top: 160px;
+      
     }
       .featured-section .sub-title h4 {
         font-size: 1.125rem;
