--- a/snippets/partnerships-featured.liquid
+++ b/snippets/partnerships-featured.liquid
@@ -219,7 +219,7 @@
 
     @media screen and (max-width: 768px) {
     .featured-section {
-       padding-top: {% if isFlash %} 160px {% else %} 50px {% endif %};
+       padding: {% if isFlash %} 160px 0 0 {% else %} 140px 0 0 {% endif %};
       
     }
       .featured-section .sub-title h4 {
