--- a/snippets/partnerships-featured.liquid
+++ b/snippets/partnerships-featured.liquid
@@ -87,7 +87,7 @@
 
   .featured-section {
       font-family: "Poppins", sans-serif;
-      padding:{% unless isFlash %} 80px 0 0 {% endunless %}; 
+      padding: 80px 0 0 ; 
   }
 
   .featured-section .sub-title {
