--- a/snippets/partnerships-featured.liquid
+++ b/snippets/partnerships-featured.liquid
@@ -223,7 +223,8 @@
     }
       .featured-section .sub-title h4 {
         font-size: 1.125rem;
-        letter-spacing: normal
+        letter-spacing: normal;
+        margin: 45px 0;
       }
 
      
