--- a/templates/product.all-in-one-flash.liquid
+++ b/templates/product.all-in-one-flash.liquid
@@ -34,7 +34,7 @@
 | split: '|' %}
 
 {% render 'script.round-converted-currency' %}
-{% render 'sale-banner', isFlash: true, isFixed: true, desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "pink", logoFileName: "logo-black-friday.svg", ctaTitle: "flash" %}
+{% render 'sale-banner', isFlash: true, desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "pink", logoFileName: "logo-black-friday.svg", ctaTitle: "flash" %}
 <div class="product-template-all-in-one">
   {% render 'product-all-in-one-cta-section-sliders', challenge_value: challenge_value, curaeats_value: curaeats_value %}
   {% render 'bundle-gifts-section', challenge_value: challenge_value, curaeats_value: curaeats_value %}
