--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -22,7 +22,7 @@
           <div class="percents-off">20% OFF</div>
         </div>
         {% elsif ctaTitle == "flash" %}
-          <div class="twenty-percent-off part-20">
+          <div class="twenty-percent-off">
               <div class="up-to">
                   UP TO
               </div>
