--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -1,2 +1,3 @@
 {% layout 'theme.lps' %}
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
+{% render 'thirty-day-challenge-hero-banner' %}
