--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -19,7 +19,7 @@
   .hero-banner {
     position: relative;
     overflow: hidden;
-    background: #E8E8B0;
+    background: #BE6751;
     padding: {% if isLP %}unset{% endif %};
   }
 
