--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -1,3 +1,4 @@
 {% layout 'theme.lps' %}
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
-{% render 'thirty-day-challenge-hero-banner' %}
+{% render 'thirty-day-challenge-hero-banner', mainTitle: "30 Days to
+Sweet Success: ", subTitle: "A Blood Sugar Challenge" %}
