--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -5,7 +5,6 @@
       <div class="text-button">
         <div class="main-title">{{ mainTitle }}</div>
         <div class="subtitle">{{ subTitle }}</div>
-        <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
       </div>
       <img class="main-img" src="{{ 'mask-and-bottle.png' | asset_url }}" width="1039" height="528" alt="bottle-hand-mask" loading="lazy">
     </div>
@@ -20,12 +19,12 @@
     position: relative;
     overflow: hidden;
     background: #BE6751;
-    padding: {% if isLP %}unset{% endif %};
+    
   }
 
   .hero-banner .main-img {
     position: relative;
-    left: {% if isLP %}36px{% else %}50px{% endif %};
+    left: 50px;
   }
 
   .hero-button h1 {
@@ -36,26 +35,8 @@
     font-weight: 700;
   }
 
-  .cta-btn {
-    font-weight: 100;
-    background: var(--dark-green);
-    text-align: center;
-    border: 1px solid  var(--dark-green);
-    border-radius: 4px;
-    font-size: clamp(20px, 2vw, 18px);
-    letter-spacing: {% if isLP %} 1.5px {% endif %};
-    color: white;
-    padding: 10px 30px;
-    box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
-    transition: unset;
-    margin-bottom: 20px;
-    width: 250px;
-    margin-top: 40px;
-  }
 
-  .cta-btn:hover {
-    background: var(--darker-green);
-  }
+
   .hero-banner-content {
     display: flex;
     align-items: center;
@@ -73,7 +54,7 @@
 
   .hero-banner-content .text-button .main-title {
     color: var(--dark-green);
-    font-size: {% if isLP %}clamp(40px, 4vw, 60px){% else %}clamp(50px, 12vw, 120px) {% endif %};
+    font-size: clamp(50px, 12vw, 120px);
   }
 
   .hero-banner-content .text-button .subtitle {
@@ -91,34 +72,22 @@
     display: none;
   }
 
-  @media screen and (max-width: 877px) {
-    .hero-banner-content {
-      padding-top: {% if isLP %}80px {% endif %};
-      
-    }
-  }
+
 
   @media screen and (max-width: 768px) {
     .hero-banner {
       text-align: center;
       height: calc(100vh - 60px);
-      padding-top:  {% if isLP %}75px{% endif %} ;
+     
     }
 
 
     
 
-    .hero-banner .text-button .cta-btn {
-      bottom: 15px;
-      left: 5%;
-      position: absolute;
-      width: 90%;
-      z-index: 2;
-    }
 
     .hero-banner-content {
       display: block;
-      padding-top: {% if isLP %} 20px {% else %}40px{% endif %};
+      padding-top: 40px;
     }
 
     .hero-banner-content .text-button .main-title {
@@ -137,7 +106,7 @@
     .hero-banner .main-img-mb {
       display: block;
       position: absolute;
-      top: {% if isLP %} 310px {% else %} 140px {% endif %};
+      top:  140px ;
       width: 120%;
     }
 
