--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -27,15 +27,6 @@
     left: 50px;
   }
 
-  .hero-button h1 {
-    font-family: 'PP Radio Grotesk';
-    color: var(--dark-green);
-    margin: unset;
-    line-height: 1em;
-    font-weight: 700;
-  }
-
-
 
   .hero-banner-content {
     display: flex;
@@ -53,10 +44,13 @@
   }
 
   .hero-banner-content .text-button .main-title {
-    color: var(--dark-green);
-    font-size: clamp(50px, 12vw, 120px);
-  }
-
+    color: #FFF1E8;
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: clamp(48px, 3vw, 115px);
+    line-height:clamp(45px, 2vw, 107px) ;
+    letter-spacing: -0.02em;
+}
   .hero-banner-content .text-button .subtitle {
     color: var(--dark-green);
     font-style: normal;
