--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -47,8 +47,8 @@
     color: #FFF1E8;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: clamp(48px, 3vw, 115px);
-    line-height:clamp(45px, 2vw, 107px) ;
+    font-size:  115px;
+    line-height:107px;
     letter-spacing: -0.02em;
 }
   .hero-banner-content .text-button .subtitle {
@@ -86,6 +86,8 @@
 
     .hero-banner-content .text-button .main-title {
       text-align: center;
+      font-size:  48px;
+      line-height: 45px;
     }
 
     .hero-banner-content .text-button .subtitle {
