--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -53,9 +53,11 @@
 }
   .hero-banner-content .text-button .subtitle {
     color: var(--dark-green);
-    font-style: normal;
-    font-weight: 300;
-    font-size: clamp(35px, 2vw, 45px);
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 73px;
+    line-height: 75px;  
+    letter-spacing: -0.03em;
   }
 
   .hero-banner .main-img-mb {
