--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -93,8 +93,10 @@
     }
 
     .hero-banner-content .text-button .subtitle {
-      margin: 0 auto;
-      max-width: 280px;
+      font-size: 29px;
+      line-height: 33px;
+      text-align: center;
+      letter-spacing: -0.03em;
     }
 
     .hero-banner-content .main-img {
