--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -18,7 +18,7 @@
   .hero-banner {
     position: relative;
     overflow: hidden;
-    background: linear-gradient(180deg,  #FB9378 60.74%, #D07D5B 0%);
+    background: linear-gradient(180deg, #D07D5B 0%, #FB9378 60.74%);
     
     
   }
