--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -18,8 +18,8 @@
   .hero-banner {
     position: relative;
     overflow: hidden;
-    background: linear-gradient(180deg, #D07D5B 0%, #FB9378 60.74%);
-    
+    background: rgb(208,125,91);
+    background: linear-gradient(127deg, rgba(208,125,91,1) 0%, rgba(251,147,120,1) 60.74%);
     
   }
 
