--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -18,8 +18,7 @@
   .hero-banner {
     position: relative;
     overflow: hidden;
-    background: rgb(208,125,91);
-    background: linear-gradient(127deg, rgba(208,125,91,1) 0%, rgba(251,147,120,1) 60.74%);
+    background-image: linear-gradient(to top, #d07d5b, #db8262, #e58869, #f08d70, #fb9378);
     
   }
 
