--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -6,10 +6,10 @@
         <div class="main-title">{{ mainTitle }}</div>
         <div class="subtitle">{{ subTitle }}</div>
       </div>
-      {% comment %} <img class="main-img" src="{{ 'mask-and-bottle.png' | asset_url }}" width="1039" height="528" alt="bottle-hand-mask" loading="lazy"> {% endcomment %}
+      <img class="main-img" src="{{ 'thirty-strong-woman.png' | asset_url }}" width="1271" height="879" alt="bottle-hand-mask" loading="lazy">
     </div>
   </div>
-  {% comment %} <img class="main-img-mb" src="{{ 'mask-and-bottle-mb.png' | asset_url }}" width="750" height="1084" alt="bottle-hand-mask-mb" loading="lazy"> {% endcomment %}
+    <img class="main-img-mb" src="{{ 'thirty-strong-woman-mobile.png' | asset_url }}" width="375" height="363" alt="bottle-hand-mask-mb" loading="lazy"> 
 </section>
 
 <style>
