--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -19,12 +19,13 @@
     position: relative;
     overflow: hidden;
     background-image: linear-gradient(to top, #d07d5b, #db8262, #e58869, #f08d70, #fb9378);
-    
+    z-index: -2;
   }
 
   .hero-banner .main-img {
     position: relative;
-    left: 50px;
+    left: -307px;
+    z-index: -1;
   }
 
 
@@ -63,9 +64,7 @@
     display: none;
   }
 
-  .hero-banner .container .main-btn.mobile-btn {
-    display: none;
-  }
+
 
 
 
