--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -5,6 +5,7 @@
       <div class="text-button">
         <div class="main-title">{{ mainTitle }}</div>
         <div class="subtitle">{{ subTitle }}</div>
+        <div class="text-hero">Support your glucose and feel amazing. Expert guidance. Personalized support. All natural supplements. We're with you every step  of the way. </div>
       </div>
       <img class="main-img" src="{{ 'thirty-strong-woman.png' | asset_url }}" width="1271" height="879" alt="bottle-hand-mask" loading="lazy">
     </div>
@@ -16,6 +17,7 @@
 
   
   .hero-banner {
+    padding: 20px 0;
     position: relative;
     overflow: hidden;
     background-image: linear-gradient(to top, #d07d5b, #db8262, #e58869, #f08d70, #fb9378);
@@ -74,11 +76,6 @@
       height: calc(100vh - 60px);
      
     }
-
-
-    
-
-
     .hero-banner-content {
       display: block;
     }
