--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -5,7 +5,7 @@
       <div class="text-button">
         <div class="main-title">{{ mainTitle }}</div>
         <div class="subtitle">{{ subTitle }}</div>
-        <div class="text-hero">Support your glucose and feel amazing. Expert guidance. Personalized support. All natural supplements. We're with you every step  of the way. </div>
+        <div class="text-hero">{{ textHero }} </div>
       </div>
       <img class="main-img" src="{{ 'thirty-strong-woman.png' | asset_url }}" width="1271" height="879" alt="bottle-hand-mask" loading="lazy">
     </div>
