--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -40,8 +40,6 @@
   .hero-banner-content .text-button {
     display: flex;
     flex-direction: column;
-    font-family: 'PP Radio Grotesk';
-    font-weight: 700;
     min-width: 40%;
   }
 
@@ -60,6 +58,10 @@
     font-size: 73px;
     line-height: 75px;  
     letter-spacing: -0.03em;
+  }
+
+  .hero-banner-content .text-button .text-hero {
+
   }
 
   .hero-banner .main-img-mb {
