--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -61,7 +61,13 @@
   }
 
   .hero-banner-content .text-button .text-hero {
-
+      font-family: 'DM Sans';
+      font-weight: 700;
+      font-size: 25px;
+      line-height: 30px;  
+      letter-spacing: -0.02em;
+      color: #FFFFFF;
+    
   }
 
   .hero-banner .main-img-mb {
