--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -1,4 +1,4 @@
 {% layout 'theme.lps' %}
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "30 Days to
-Sweet Success: ", subTitle: "A Blood Sugar Challenge" %}
+Sweet Success: ", subTitle: "A Blood Sugar Challenge", textHero: "Support your glucose and feel amazing. Expert guidance. Personalized support. All natural supplements. We're with you every step  of the way." %}
