--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -101,6 +101,13 @@
       letter-spacing: -0.03em;
     }
 
+    .hero-banner-content .text-button .text-hero {
+      font-size: 22px;
+      line-height: 24px;
+      text-align: center;
+      letter-spacing: -0.02em;
+    }
+
     .hero-banner-content .main-img {
       display: none;
     }
