--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -26,8 +26,9 @@
 
   .hero-banner .main-img {
     position: relative;
-    left: -307px;
+    left: -100px;
     z-index: -1;
+    max-width: 90%;
   }
 
 
