--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -33,6 +33,7 @@
     position: relative;
     z-index: -1;
     max-width: 80%;
+    right: 150px;
   }
 
 
@@ -41,7 +42,7 @@
   .hero-banner-content .text-button {
     display: flex;
     flex-direction: column;
-    min-width: 40%;
+    min-width: 50%;
   }
 
   .hero-banner-content .text-button .main-title {
