--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -49,15 +49,17 @@
     color: #FFF1E8;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size:  68px;
+    font-size: 88px;
+    line-height: 88px;
     letter-spacing: -0.02em;
 }
   .hero-banner-content .text-button .subtitle {
+    padding-top: 30px;
     color: var(--dark-green);
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 55px;
-    line-height: 46px;  
+    font-size: 57px;
+    line-height: 55px;
     letter-spacing: -0.03em;
   }
 
@@ -65,8 +67,9 @@
       padding-top: 100px;
       font-family: 'DM Sans';
       font-weight: 700;
-      font-size: 25px;
+      font-size: 22px;
       color: #FFFFFF;
+      max-width: 320px;
     
   }
 
