--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -66,7 +66,7 @@
       padding-top: 100px;
       font-family: 'DM Sans';
       font-weight: 700;
-      font-size: 25px;
+      font-size: clamp(22px, 2vw, 25px);
       color: #FFFFFF;
       max-width: 294px;
     
@@ -104,7 +104,8 @@
     }
 
     .hero-banner-content .text-button .text-hero {
-      font-size: 22px;
+      position: absolute;
+      top: 300px;
       line-height: 24px;
       text-align: center;
       letter-spacing: -0.02em;
