--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -48,9 +48,7 @@
     color: #FFF1E8;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 88px;
-    line-height: 88px;
-    letter-spacing: -0.02em;
+    font-size: clamp(48px, 2vw, 88px);
 }
   .hero-banner-content .text-button .subtitle {
     padding-top: 30px;
@@ -92,8 +90,7 @@
 
     .hero-banner-content .text-button .main-title {
       text-align: center;
-      font-size:  48px;
-      line-height: 45px;
+      
     }
 
     .hero-banner-content .text-button .subtitle {
