--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -48,16 +48,15 @@
     color: #FFF1E8;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: clamp(48px, 4vw, 88px);
+    font-size: clamp(48px, 5vw, 115px);
 }
   .hero-banner-content .text-button .subtitle {
     padding-top: 30px;
     color: var(--dark-green);
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 57px;
-    line-height: 55px;
-    letter-spacing: -0.03em;
+    font-size: clamp(48px, 4vw, 75px);
+    
   }
 
   .hero-banner-content .text-button .text-hero {
@@ -89,18 +88,19 @@
     }
 
     .hero-banner-content .text-button .main-title {
+      
       text-align: center;
       
     }
 
     .hero-banner-content .text-button .subtitle {
-      font-size: 29px;
-      line-height: 33px;
+      padding-top: unset;
       text-align: center;
-      letter-spacing: -0.03em;
+
     }
 
     .hero-banner-content .text-button .text-hero {
+      padding-top: unset;
       position: absolute;
       top: 300px;
       line-height: 24px;
