--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -103,7 +103,7 @@
     .hero-banner-content .text-button .text-hero {
       padding-top: unset;
       line-height: 24px;
-      text-align: center;
+      margin: 0 auto;
       letter-spacing: -0.02em;
     }
 
