--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -64,7 +64,7 @@
       padding-top: 100px;
       font-family: 'DM Sans';
       font-weight: 700;
-      font-size: clamp(22px, 2vw, 25px);
+      font-size: clamp(15px, 2vw, 25px);
       color: #FFFFFF;
       max-width: 294px;
     
@@ -105,6 +105,7 @@
       line-height: 24px;
       margin: 0 auto;
       letter-spacing: -0.02em;
+      max-width: 279px
     }
 
     .hero-banner-content .main-img {
@@ -122,14 +123,7 @@
       margin-left: unset;
     }
 
-    .hero-banner .container .main-btn.mobile-btn {
-      display: block;
-      margin-top: -30vw;
-      text-transform: unset !important;
-    }
-
-  }
-
   
   }
+
 </style>
