--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -105,7 +105,8 @@
       line-height: 24px;
       margin: 0 auto;
       letter-spacing: -0.02em;
-      max-width: 279px
+      max-width: 279px;
+      padding-top: 300px;
     }
 
     .hero-banner-content .main-img {
