--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -64,7 +64,7 @@
       padding-top: 100px;
       font-family: 'DM Sans';
       font-weight: 700;
-      font-size: clamp(15px, 2vw, 25px);
+      font-size: clamp(22px, 2vw, 25px);
       color: #FFFFFF;
       max-width: 294px;
     
@@ -105,7 +105,7 @@
       line-height: 24px;
       margin: 0 auto;
       letter-spacing: -0.02em;
-      max-width: 279px;
+      max-width: unset;
       padding-top: 300px;
     }
 
