--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -116,7 +116,7 @@
     .hero-banner .main-img-mb {
       display: block;
       position: absolute;
-      top:  242px ;
+      top:  10vw;
       width: 120%;
     }
 
