--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -127,4 +127,15 @@
   
   }
 
+  @media screen and (max-width: 768px) {
+    .hero-banner .main-img-mb {
+      top:  20vw;
+    }
+
+    @media screen and (max-width: 564px) {
+    .hero-banner .main-img-mb {
+      top:  30vw;
+    }
+  }
+
 </style>
