--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -144,4 +144,10 @@
     }
   }
 
+  @media screen and (max-width: 364px) {
+    .hero-banner .main-img-mb {
+      top:  50vw;
+    }
+  }
+
 </style>
