--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -150,4 +150,11 @@
     }
   }
 
+  @media screen and (max-width: 341px) {
+    .hero-banner .main-img-mb {
+      top:  60vw;
+    }
+  }
+
+
 </style>
