--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -106,7 +106,7 @@
       margin: 0 auto;
       letter-spacing: -0.02em;
       max-width: unset;
-      padding-top: 300px;
+      padding-top: 95vw;
     }
 
     .hero-banner-content .main-img {
