--- a/snippets/thirty-day-challenge-say-goodby-section.liquid
+++ b/snippets/thirty-day-challenge-say-goodby-section.liquid
@@ -32,10 +32,13 @@
 }
 
  .say-goodbye-section .say-goodbye .say-goodbye-content .goodbye {
-    font-size: 30px;
-    font-weight: bold;
-    margin-top: 0;
-    margin-bottom: 10px
+  font-family: 'PP Radio Grotesk';
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 48px;
+    text-align: center;
+    letter-spacing: -0.01em;
+    color: #404733;
 }
 
  .say-goodbye-section .say-goodbye .say-goodbye-content .say-hello {
@@ -57,12 +60,6 @@
       margin-left: 30px
   }
 
- .say-goodbye .say-goodbye-content .goodbye {
-      font-size: 30px;
-      font-weight: bold;
-      margin-top: 0;
-      margin-bottom: 10px
-  }
 
    .say-goodbye-section .say-goodbye .say-goodbye-content .say-hello {
       margin: 0;
@@ -77,7 +74,10 @@
   }
 
  .say-goodbye-section .say-goodbye .say-goodbye-content .goodbye {
-      font-size: 24px
+      font-size: 26px;
+      line-height: 33px;
+      text-align: center;
+      letter-spacing: -0.01em;
   }
 
 
