--- a/snippets/thirty-day-challenge-say-goodby-section.liquid
+++ b/snippets/thirty-day-challenge-say-goodby-section.liquid
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="say-goodbye">
       <div class="say-goodbye-content">
-        <p class="goodbye">Say goodbye to 
+        <p class="goodbye">Say goodbye to <br> 
         unpredictable blood sugar levels</p>
         <p class="say-hello">and hello to a happier, healthier you. </p>
       </div>
