--- a/snippets/thirty-day-challenge-say-goodby-section.liquid
+++ b/snippets/thirty-day-challenge-say-goodby-section.liquid
@@ -42,8 +42,15 @@
 }
 
  .say-goodbye-section .say-goodbye .say-goodbye-content .say-hello {
-    margin: 0;
-    font-size: 16px
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 76.67px;
+    line-height: 68px; 
+    text-align: center;
+    letter-spacing: -0.01em;
+    color: #9EB069;
+
+  
 }
 
  
@@ -59,13 +66,6 @@
   .say-goodbye-section .say-goodbye .say-goodbye-content {
       margin-left: 30px
   }
-
-
-   .say-goodbye-section .say-goodbye .say-goodbye-content .say-hello {
-      margin: 0;
-      font-size: 16px
-  }
-
   @media screen and (max-width: 768px) {
 
 
@@ -78,6 +78,11 @@
       line-height: 35px;
       text-align: center;
       letter-spacing: -0.01em;
+    }
+
+    .say-goodbye-section .say-goodbye .say-goodbye-content .say-hello {  
+        font-size: 45px;
+        line-height: 45px;
     }
   }
 </style>
