--- a/snippets/thirty-day-challenge-say-goodby-section.liquid
+++ b/snippets/thirty-day-challenge-say-goodby-section.liquid
@@ -2,9 +2,9 @@
   <div class="container">
     <div class="say-goodbye">
       <div class="say-goodbye-content">
-        <div class="goodbye">Say goodbye to <br> 
-        unpredictable blood sugar levels</div>
-        <div class="say-hello">and hello to a happier, healthier you. </div>
+        <p class="goodbye">Say goodbye to <br> 
+        unpredictable blood sugar levels</p>
+        <p class="say-hello">and hello to a happier, healthier you. </p>
       </div>
     </div>
   </div>
