--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -1,10 +1,9 @@
 
 <section id="challenge-section">
   <div class="container">
-    <h3>30 Day Life Changing Program</h3>
-    <p>There is a science to healthy blood sugar, and we’ve cracked it.<br><br>
-    Together, we’ll help you kickstart a healthier, stronger, and more determined you... because you deserve health that lasts.<br><br>
-    Let’s build good habits together. <b>We’ll guide you every step of the way!</b></p>
+    <h3><b> Everything you need </b>
+    to keep your blood sugar maintained:</h3>
+   
 
     <div class="features-wrapper">
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
