--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -1,9 +1,9 @@
 
 <section id="challenge-section">
   <div class="container">
-    <h3><b> Everything you need </b>
-    to keep your blood sugar maintained:</h3>
-   
+    <h3> Everything you need
+    </h3>
+    <p>to keep your blood sugar maintained:</p>
 
     <div class="features-wrapper">
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
