--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -46,8 +46,7 @@
     font-weight: 700;
     font-size: 48px;
     line-height: 1em;
-    margin-top: unset;
-    margin-bottom: 40px;
+    margin: 0 auto;
     z-index: 0;
     position: relative;
     width: fit-content;
