--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -44,7 +44,10 @@
     font-family: 'PP Radio Grotesk';
     color: #404733;
     font-weight: 700;
-    font-size: 48px;
+    font-size: 60px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: -0.02em;
     line-height: 1em;
     margin: 0 auto;
     z-index: 0;
