--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -111,10 +111,8 @@
     }
 
     #challenge-section h3 {
-      max-width: 80%;
-      font-size: 8vw;
-      line-height: 1.2em;
-      margin-bottom: 5vw;
+      font-size: 32px;
+      line-height: 35px;
     }
 
     #challenge-section .main-image {
