--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -56,7 +56,7 @@
   }
 
   #challenge-section p {
-    margin: 0 auto;
+    text-align: center;
     font-weight: normal;
     color: var(--dark-green);
   }
