--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -57,7 +57,12 @@
 
   #challenge-section p {
     text-align: center;
-    font-weight: normal;
+    font-family: 'PP Radio Grotesk';
+    font-weight: 400;
+    font-size: 60px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: -0.02em;
     color: var(--dark-green);
   }
 
