--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -115,7 +115,7 @@
       padding: 0 15px;
     }
 
-    #challenge-section h3 {
+    #challenge-section h3, p {
       font-size: 32px;
       line-height: 35px;
     }
