--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -115,7 +115,12 @@
       padding: 0 15px;
     }
 
-    #challenge-section h3, p {
+    #challenge-section h3 {
+      font-size: 32px;
+      line-height: 35px;
+    }
+
+    #challenge-section p {
       font-size: 32px;
       line-height: 35px;
     }
