--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -7,8 +7,8 @@
 
     <div class="features-wrapper">
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
-      {% assign features = "<b>Curalin</b> - clinically tested for blood sugar health
-        |Tips on what to eat to nourish your body (and cravings 😉)
+      {% assign features = "<b>30 day supply of Curalin</b>  (180 capsules) 
+        |<b>30 day mouth-watering meal plan</b> including recipes and videos
         |Easy exercise routines that you’ll love
         |A community of 100K+ people cheering you on and helping you out
         |24/7 unlimited access to Curalife’s customer success team" | split: "|" %}
