--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -9,9 +9,12 @@
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
       {% assign features = "<b>30 day supply of Curalin</b>  (180 capsules) 
         |<b>30 day mouth-watering meal plan</b> including recipes and videos
-        |Easy exercise routines that you’ll love
-        |A community of 100K+ people cheering you on and helping you out
-        |24/7 unlimited access to Curalife’s customer success team" | split: "|" %}
+        |<b>14 day easy-to-do movement and exercise plan</b> with videos
+        |<b>Blood Sugar Explained</b> In Plain English (infographic)
+        |<b>Curalife Blood Sugar Healthy Cookbook</b>
+        |<b>Free Shipping </b>
+        |<b>Community support</b>  with 100K+ peers
+        |<b>24/7 Customer Support</b>  (phone, email, or live chat) | split: "|" %}
 
       <div class="features">
         {% for feature in features %}
