--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -14,7 +14,7 @@
         |<b>Curalife Blood Sugar Healthy Cookbook</b>
         |<b>Free Shipping </b>
         |<b>Community support</b>  with 100K+ peers
-        |<b>24/7 Customer Support</b>  (phone, email, or live chat) | split: "|" %}
+        |<b>24/7 Customer Support</b>  (phone, email, or live chat)" | split: "|" %}
 
       <div class="features">
         {% for feature in features %}
