--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -94,6 +94,7 @@
     font-family: "PP Radio Grotesk";
     font-weight: normal;
     font-size: 24px;
+    line-height: 24px;
   }
 
   #challenge-section .features .feature:last-child {
