--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -81,7 +81,7 @@
   }
 
   #challenge-section .features {
-    max-width: 415px;
+    max-width: 40%;
     display: flex;
     flex-direction: column;
   }
