--- a/templates/product.all-in-one.liquid
+++ b/templates/product.all-in-one.liquid
@@ -54,7 +54,7 @@
 <script>
   let queryParam = window.location.search;
 
-  if (queryParam.includes('sale=flash')) {
+  if (queryParam.includes('sale=')) {
     $('.sale-banner').toggleClass('hidden');
   }
 </script>
