--- a/snippets/sale-banner.liquid
+++ b/snippets/sale-banner.liquid
@@ -339,3 +339,13 @@
     }
   }
 </style>
+
+{% if isHidden %}
+  <script>
+    let queryParam = window.location.search;
+
+    if (queryParam.includes('sale=')) {
+      $('.sale-banner').toggleClass('hidden');
+    }
+  </script>
+{% endif %}
