--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -250,3 +250,11 @@
     });
   }
 </script>
+
+<script>
+  let queryParam = window.location.search;
+
+  if (queryParam.includes('sale=')) {
+    $('#hero-section .logo').hide();
+  }
+</script>
