--- a/snippets/aio-first-page-hero-section.liquid
+++ b/snippets/aio-first-page-hero-section.liquid
@@ -251,6 +251,7 @@
   }
 </script>
 
+{% comment %} hide logo if SALE header is presented {% endcomment %}
 <script>
   let queryParam = window.location.search;
 
