--- a/snippets/thirty-day-challenge-say-goodby-section.liquid
+++ b/snippets/thirty-day-challenge-say-goodby-section.liquid
@@ -34,7 +34,7 @@
     line-height: 48px;
     text-align: center;
     letter-spacing: -0.01em;
-    color: #404733;
+    color: var(--dark-green);
 }
 
  .say-goodbye-section .say-goodbye .say-goodbye-content .say-hello {
