--- a/snippets/thirty-day-challenge-say-goodby-section.liquid
+++ b/snippets/thirty-day-challenge-say-goodby-section.liquid
@@ -44,7 +44,7 @@
     line-height: 68px; 
     text-align: center;
     letter-spacing: -0.01em;
-    color: #9EB069;
+    color: var(--light-green);
 
   
 }
