--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -45,7 +45,7 @@
 
   #challenge-section h3 {
     font-family: 'PP Radio Grotesk';
-    color: #404733;
+    color: var(--dark-green);
     font-weight: 700;
     font-size: 60px;
     line-height: 60px;
