--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1324,6 +1324,7 @@ body.compensate-for-scrollbar {
 	--light-green: #9EB069;
 	--brown: #D3AE5F;
 	--orange: #FFB22D;
+	--light-orange: #FFC35A;
 	--red: #ED073E;
 	--vomit: #E8E8B0;
 }
