--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -160,5 +160,13 @@
     #challenge-section .features {
       max-width: unset;
     }
+
+     .cta-btn {
+      bottom: 15px;
+      left: 5%;
+      position: absolute;
+      width: 90%;
+      z-index: 2;
+    }
   }
 </style>
