--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -129,6 +129,7 @@
     margin-bottom: 20px;
     width: 250px;
     margin-top: 40px;
+    margin-left: 200px;
   }
 
   .cta-btn:hover {
@@ -162,6 +163,7 @@
     }
 
      .cta-btn {
+      margin-left: unset;
       bottom: -75px;
       left: 5%;
       position: absolute;
