--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -23,7 +23,9 @@
             <div class="feature-text">{{ feature | split: "|" | last }}</div>
           </div>
         {% endfor %}
+        <div class="total-value">Total Value Before Discount: $185 </div>
       </div>
+      
       <a class="cta-btn" href="{{ ctaButtonLink }}">{{ ctaTitle }}</a>
      
     </div>
@@ -112,6 +114,16 @@
     align-items: center;
     justify-content: center;
     margin-right: 20px;
+  }
+
+  .total-value {  
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 17px;
+    text-align: center;
+    letter-spacing: -0.01em;
+    color: var(--light-green);
   }
 
   .cta-btn {
