--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -99,7 +99,7 @@
     line-height: 24px;
   }
 
-  #challenge-section .features .feature:last-child {
+  #challenge-section .features .feature:nth-child(8) {
     border-bottom: unset;
   }
 
