--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -124,6 +124,7 @@
     text-align: center;
     letter-spacing: -0.01em;
     color: var(--light-green);
+    padding-top: 20px;
   }
 
   .cta-btn {
