--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -128,7 +128,7 @@
     padding-top: 20px;
   }
 
-  .price-today {
+  .new-price {
     font-family: 'Poppins';
     font-weight: 700;
     font-size: 52px;
@@ -192,7 +192,7 @@
       z-index: 2;
     }
 
-    .price-today {
+    .new-price {
       font-size: 44px;
     }
   }
