--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -128,6 +128,16 @@
     padding-top: 20px;
   }
 
+  .price-today {
+    font-family: 'PP Radio Grotesk';
+    font-weight: 400;
+    font-size: 37px;
+    line-height: 30px;
+    letter-spacing: -0.01em;
+    color: var(--dark-green);
+
+  }
+
   .new-price {
     font-family: 'Poppins';
     font-weight: 700;
