--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -202,6 +202,11 @@
       z-index: 2;
     }
 
+    .price-today {
+      font-size: 32px;
+      line-height: 26px;
+    }
+
     .new-price {
       font-size: 44px;
     }
