--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -129,6 +129,8 @@
   }
 
   .price-today {
+    display: flex;
+    align-items: center;
     font-family: 'PP Radio Grotesk';
     font-weight: 400;
     font-size: 37px;
