--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -129,8 +129,10 @@
   }
 
   .price-today {
+    padding-top: 30px;
     display: flex;
     align-items: center;
+    justify-content: center;
     font-family: 'PP Radio Grotesk';
     font-weight: 400;
     font-size: 37px;
