--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -135,7 +135,7 @@
     justify-content: center;
     font-family: 'PP Radio Grotesk';
     font-weight: 400;
-    font-size: 37px;
+    font-size: clamp(25px, 2vw, 37px);
     line-height: 30px;
     letter-spacing: -0.01em;
     color: var(--dark-green);
@@ -204,11 +204,6 @@
       position: absolute;
       width: 90%;
       z-index: 2;
-    }
-
-    .price-today {
-      font-size: 32px;
-      line-height: 26px;
     }
 
     .new-price {
