--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -133,6 +133,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 10px;
     font-family: 'PP Radio Grotesk';
     font-weight: 400;
     font-size: clamp(25px, 2vw, 37px);
