--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -155,10 +155,10 @@
     text-align: center;
     border: 1px solid  var(--orange);
     border-radius: 4px;
-    font-size: clamp(20px, 2vw, 18px);
-    letter-spacing: {% if isLP %} 1.5px {% endif %};
+    font-weight: 700;
+    font-size: clamp(14px, 2vw, 18px);
     color: var(--dark-green);
-    padding: 10px 30px;
+    padding: 15px 30px;
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
     margin-bottom: 20px;
