--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -158,12 +158,11 @@
     font-weight: 700;
     font-size: clamp(14px, 2vw, 18px);
     color: var(--dark-green);
-    padding: 15px 30px;
+    padding: 15px 40px;
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
     margin-bottom: 20px;
-    width: 250px;
-    margin-left: 200px;
+    margin-left: 16%;
   }
 
   .cta-btn:hover {
