--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -130,6 +130,7 @@
 
   .price-today {
     padding-top: 30px;
+    padding-bottom: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
