--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -7,20 +7,21 @@
 
     <div class="features-wrapper">
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
-      {% assign features = "<b>30 day supply of Curalin</b>  (180 capsules) 
-        |<b>30 day mouth-watering meal plan</b> including recipes and videos
-        |<b>14 day easy-to-do movement and exercise plan</b> with videos
-        |<b>Blood Sugar Explained</b> In Plain English (infographic)
-        |<b>Curalife Blood Sugar Healthy Cookbook</b>
-        |<b>Free Shipping </b>
-        |<b>Community support</b>  with 100K+ peers
-        |<b>24/7 Customer Support</b>  (phone, email, or live chat)" | split: "|" %}
+      {% assign features = "<b>30 day supply of Curalin</b>  (180 capsules):$75 
+        |<b>30 day mouth-watering meal plan</b> including recipes and videos:$29
+        |<b>14 day easy-to-do movement and exercise plan</b> with videos:$59
+        |<b>Blood Sugar Explained</b> In Plain English (infographic):$14
+        |<b>Curalife Blood Sugar Healthy Cookbook</b>:$40
+        |<b>Free Shipping </b>:$8
+        |<b>Community support</b>  with 100K+ peers:Priceless
+        |<b>24/7 Customer Support</b>:Priceless  (phone, email, or live chat)" | split: "|" %}
 
       <div class="features">
         {% for feature in features %}
           <div class="feature">
             <div class="feature-icon"><i class="icofont-check"></i></div>
-            <div class="feature-text">{{ feature | split: "|" | last }}</div>
+            <div class="feature-text">{{ feature | split: ":" | first }}</div>
+            <div class="feature-price">{{ feature | split: ":" | last }}</div>
           </div>
         {% endfor %}
         <div class="total-value">Total Value Before Discount: $185 </div>
