--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -7,14 +7,14 @@
 
     <div class="features-wrapper">
       <img class="main-image" src="{{ 'thirty-day-challenge-section-main-img.png' | asset_url }}" width="886" height="689" alt="">
-      {% assign features = "<b>30 day supply of Curalin</b>  (180 capsules):$75 
-        |<b>30 day mouth-watering meal plan</b> including recipes and videos:$29
-        |<b>14 day easy-to-do movement and exercise plan</b> with videos:$59
-        |<b>Blood Sugar Explained</b> In Plain English (infographic):$14
-        |<b>Curalife Blood Sugar Healthy Cookbook</b>:$40
+      {% assign features = "<b>30 day supply of Curalin</b>  (180 capsules):      $75 
+        |<b>30 day mouth-watering meal plan</b> including recipes and videos:      $29
+        |<b>14 day easy-to-do movement and exercise plan</b> with videos:      $59
+        |<b>Blood Sugar Explained</b> In Plain English (infographic):      $14
+        |<b>Curalife Blood Sugar Healthy Cookbook</b>:      $40
         |<b>Free Shipping </b>:$8
-        |<b>Community support</b>  with 100K+ peers:Priceless
-        |<b>24/7 Customer Support</b>:Priceless  (phone, email, or live chat)" | split: "|" %}
+        |<b>Community support</b>  with 100K+ peers:      Priceless
+        |<b>24/7 Customer Support</b>  (phone, email, or live chat):      Priceless" | split: "|" %}
 
       <div class="features">
         {% for feature in features %}
