--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -21,7 +21,7 @@
           <div class="feature">
             <div class="feature-icon"><i class="icofont-check"></i></div>
             <div class="feature-text">{{ feature | split: ":" | first }}</div>
-            <div class="feature-price">{{ feature | split: ":" | last }}</div>
+            <div class="feature-price">{{ feature | split: ":" | last }} Value</div>
           </div>
         {% endfor %}
         <div class="total-value">Total Value Before Discount: $185 </div>
