--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -124,6 +124,11 @@
     flex-wrap: wrap;
   }
 
+  #challenge-section .features .feature .feature-price {
+    display: flex;
+    width: 50px
+  }
+
   .total-value {  
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
