--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -91,6 +91,7 @@
   }
 
   #challenge-section .features .feature {
+    position: relative;
     display: flex;
     align-items: center;
     border-bottom: 1px solid #D9D9D9;
