--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -127,7 +127,9 @@
 
   #challenge-section .features .feature .feature-price {
     display: flex;
-    width: 50px
+    width: 50px;
+    position: absolute;
+    right: 0;
   }
 
   .total-value {  
